[gd_scene load_steps=7 format=3 uid="uid://ba4jtqrj14830"]

[ext_resource type="Theme" uid="uid://b64f3uxca5mhe" path="res://main_theme.tres" id="1_4882a"]
[ext_resource type="Script" path="res://main_scenes/level_selector.gd" id="1_ysryf"]
[ext_resource type="PackedScene" path="res://ui/current_user_display.tscn" id="3_jdp1h"]

[sub_resource type="Gradient" id="Gradient_sjk70"]
colors = PackedColorArray(0.855469, 0.775843, 0.645607, 1, 0.582031, 0.430433, 0.341377, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jm2np"]
gradient = SubResource("Gradient_sjk70")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.491453, 0.5)
fill_to = Vector2(0.0128205, 0.0042735)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_35fkw"]
texture = SubResource("GradientTexture2D_jm2np")
region_rect = Rect2(0, 0, 256, 256)
modulate_color = Color(0.796078, 0.968627, 1, 1)

[node name="LevelSelector" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_4882a")
script = ExtResource("1_ysryf")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_35fkw")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="NoPlayerLabel" type="Label" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "No player selected!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LevelListContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/LevelListContainer"]
layout_mode = 2
text = "Select a level"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/LevelListContainer"]
layout_mode = 2

[node name="LevelListScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/LevelListContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 480)
layout_mode = 2
size_flags_horizontal = 4
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="LevelList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/LevelListContainer/PanelContainer/LevelListScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackToMainMenuButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back to main menu"

[node name="Control" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="CurrentUserDisplay" parent="Control" instance=ExtResource("3_jdp1h")]
layout_mode = 1

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BackToMainMenuButton" to="." method="_on_back_to_main_menu_button_pressed"]
